[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Fjäder.gd" type="Script" id=1]
[ext_resource path="res://assets/fjäder.obj" type="ArrayMesh" id=2]
[ext_resource path="res://scripts/KonstantGlidare.gd" type="Script" id=3]
[ext_resource path="res://scripts/MassaGlidare.gd" type="Script" id=4]
[ext_resource path="res://scripts/SträckningGlidare.gd" type="Script" id=5]
[ext_resource path="res://assets/cnr.otf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/MenyKnapp.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Spatial" type="Spatial"]

[node name="Fjäder" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 19, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Fjäder"]
transform = Transform( 1, 1.50996e-07, -1.50996e-07, 1.50996e-07, -1, 2.11758e-21, -1.50996e-07, -2.27997e-14, -1, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null

[node name="Knappar" type="Panel" parent="Fjäder"]
margin_right = 481.0
margin_bottom = 202.0

[node name="KonstantGlidare" type="HSlider" parent="Fjäder/Knappar"]
margin_left = 100.0
margin_top = 37.0
margin_right = 450.0
margin_bottom = 53.0
min_value = 2.0
max_value = 50.0
step = 0.1
value = 25.0
script = ExtResource( 3 )

[node name="Text" type="Label" parent="Fjäder/Knappar/KonstantGlidare"]
margin_left = -65.0
margin_bottom = 14.0
text = "k"

[node name="SträckningGlidare" type="HSlider" parent="Fjäder/Knappar"]
margin_left = 100.0
margin_top = 60.0
margin_right = 450.0
margin_bottom = 76.0
focus_mode = 0
max_value = 9.0
step = 0.1
value = 4.0
script = ExtResource( 5 )

[node name="Text" type="Label" parent="Fjäder/Knappar/SträckningGlidare"]
margin_left = -65.0
margin_bottom = 14.0
rect_scale = Vector2( 0.905144, 0.958609 )
text = "x"

[node name="MassaGlidare" type="HSlider" parent="Fjäder/Knappar"]
margin_left = 100.0
margin_top = 83.0
margin_right = 450.0
margin_bottom = 99.0
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0
script = ExtResource( 4 )

[node name="Text" type="Label" parent="Fjäder/Knappar/MassaGlidare"]
margin_left = -65.0
margin_bottom = 14.0
text = "m"

[node name="SläppKnapp" type="Button" parent="Fjäder/Knappar"]
margin_left = 347.0
margin_top = 165.0
margin_right = 474.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 1 )
text = "Släpp"

[node name="MenyKnapp" type="Button" parent="Fjäder/Knappar"]
margin_left = 210.0
margin_top = 165.0
margin_right = 337.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 2 )
text = "Meny"
script = ExtResource( 7 )

[node name="CameraTarget" type="Spatial" parent="Fjäder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -15, 20 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="Fjäder/CameraTarget"]
target = NodePath("..")

[connection signal="pressed" from="Fjäder/Knappar/SläppKnapp" to="Fjäder" method="_on_SlappKnapp_pressed"]
[connection signal="pressed" from="Fjäder/Knappar/MenyKnapp" to="Fjäder/Knappar/MenyKnapp" method="_on_MenyKnapp_pressed"]
